<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblcalificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCalificacion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/lineadivisoria" />

    <Spinner
        android:id="@+id/spinnercalificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:paddingLeft="64dp" />

    <TextView
        android:id="@+id/lbllatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLatitud"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/lineadivisoria" />

    <EditText
        android:id="@+id/txtLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbllongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLongitud"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/lineadivisoria" />

    <EditText
        android:id="@+id/txtLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAddCoordenada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="16dp"
        android:onClick="addCoordenada"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:enabled="false"
        android:text="@string/agregacoordenada" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/lineadivisoria" />
    
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="guardarnuevolote"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/btnGuardarlote"
        android:textStyle="bold" />

</LinearLayout>