<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    
    tools:context=".LoginActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_agrinsa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LoginFormContainer" >

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:hint="@string/prompt_usuario"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"            
            android:inputType="textPassword" 
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btnIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="validaUsuario"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"        
            android:text="@string/lblBoton" />
    </LinearLayout>

</LinearLayout>